# BANKMANAGEMENT

./: .gitignore  README.md  pyproject.toml
backend/: .env  .env.example  README.md  auth.py  config.py  database.py  main.py  models.py  security.py
backend/src/: auth.py  config.py  database.py  logger.py  main.py  models.py  schemas.py  security.py
frontend/: .env.example  README.md  api.py  app.py  config.py  logger.py
